<resources>
    <string name="app_name">PaPa</string>
    <string name="app_chinse_name">啪啪</string>
    <string name="abot_us_maintext">万千美模  贴心服务</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_msg">消息</string>
    <string name="app_content">找模特、演艺、礼仪小姐，就上啪啪！</string>
    <string name="onclick_exit">再按一次退出应用</string>
    <string name="phone_hint">手机号码</string>
    <string name="agree_title">啪啪免责声明</string>
    <string name="agree_content">1、一切移动客户端用户在下载并浏览啪啪手机APP件时均被视为已经仔细阅读本条款并完全同意。凡以任何方式登陆本APP，或直接、间接使用本APP资料者，均被视为自愿接受本网站相关声明和用户服务协议的约束。
\n\n2、啪啪手机APP转载的内容并不代表啪啪手机APP之意见及观点，也不意味着本网赞同其观点或证实其内容的真实性。
\n\n3、啪啪手机APP转载的文字、图片、音视频等资料均由本APP用户提供，其真实性、准确性和合法性由信息发布人负责。啪啪手机APP不提供任何保证，并不承担任何法律责任。
\n\n4、啪啪手机APP所转载的文字、图片、音视频等资料，如果侵犯了第三方的知识产权或其他权利，责任由作者或转载者本人承担，本APP对此不承担责任。
\n\n5、啪啪手机APP不保证为向用户提供便利而设置的外部链接的准确性和完整性，同时，对于该外部链接指向的不由啪啪手机APP实际控制的任何网页上的内容，啪啪手机APP不承担任何责任。
\n\n6、用户明确并同意其使用啪啪手机APP网络服务所存在的风险将完全由其本人承担；因其使用啪啪手机APP网络服务而产生的一切后果也由其本人承担，啪啪手机APP对此不承担任何责任。
\n\n7、除啪啪手机APP注明之服务条款外，其它因不当使用本APP而导致的任何意外、疏忽、合约毁坏、诽谤、版权或其他知识产权侵犯及其所造成的任何损失，啪啪手机APP概不负责，亦不承担任何法律责任。
\n\n8、对于因不可抗力或因黑客攻击、通讯线路中断等啪啪手机APP不能控制的原因造成的网络服务中断或其他缺陷，导致用户不能正常使用啪啪手机APP，啪啪手机APP不承担任何责任，但将尽力减少因此给用户造成的损失或影响。
\n\n9、本声明未涉及的问题请参见国家有关法律法规，当本声明与国家有关法律法规冲突时，以国家法律法规为准。
\n\n10、本网站相关声明版权及其修改权、更新权和最终解释权均属啪啪手机APP所有。\n\n
</string>
    <string name="set_psd_hint">设置密码</string>
    <string name="reg">注册</string>
    <string name="enter">加入</string>
    <string name="login">登录</string>
    <string name="goto_login">去登录</string>
    <string name="next">下一步</string>
    <string name="over">完成</string>
    <string name="next_time">下次</string>
    <string name="update">马上更新</string>
    <string name="set_psd_tip">请设置密码(6-12位数字或字母)</string>
    <string name="set_psd_tip_agin">请再次输入密码</string>
    <string name="user_hint">输入用户名</string>
    <string name="psd_hint">输入密码</string>
    <string name="forget_psd">忘记了密码？</string>
    <string name="find_psd">找回密码</string>
    <string name="code_hint">输入验证码</string>
    <string name="i_am">我是...</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="i_want">我想...</string>
    <string name="find_service">找服务</string>
    <string name="get_work">接活儿</string>
    <string name="i_like">我喜欢...</string>
    <string name="set_nickname_tip">请设置一个昵称</string>
    <string name="set_cost_tip">每小时收取服务费</string>
    <string name="set_nickname_hint">请设置12个字符内的昵称</string>
    <string name="set_cost_hint">请设置服务费元/小时</string>
    <string name="set_selelect_tip">请选择一个头像</string>
    <string name="call_tip">找个模特</string>
    <string name="matching_tip">正在为你匹配模特\n请勿走开哦</string>
    <string name="seemore">查看更多>></string>
    <string name="dialog_matching_tip">嗨~ 客人您好，欢迎来到啪啪的世界，预约我们的开始时间为下午两点！</string>
    <string name="dialog_matching_time_miss">您好！PAPA美模在线预约时间为14:00-24:00,其他时段无法及时回复您的消息哦~！</string>
    <string name="dialog_matching_nothing">嗨~ 客人您好，您所访问的城市暂时还没有美模提供服务哦！
        我们近期将为本城市提供服务，敬请期待！美模入驻，</string>
    <string name="cancle_tip">取消</string>
    <string name="sure_tip">确定</string>
    <string name="know_tip">知道了</string>
    <string name="person_tip">个人中心</string>
    <string name="profile_tip">个人资料</string>
    <string name="safe_tip">账户与安全</string>
    <string name="key_tip">邀请码</string>
    <string name="my_order">我的订单</string>
    <string name="vip_list">会员特权</string>
    <string name="order_detail">订单详情</string>
    <string name="bill_detail">账单详情</string>
    <string name="key_text">你的好友可以使用下列邀请码加入Bber\n(附带应用下载链接)</string>
    <string name="pay_tip">支付</string>
    <string name="pay_method">支付方式</string>
    <string name="copy_key_tip">已复制到剪贴板</string>
    <string name="logout_tip">退出登录</string>
    <string name="logout_text">确定退出登录？</string>
    <string name="relogin">你的账号在其它地方登陆，请重新登录！</string>
    <string name="conti">再看看</string>
    <string name="back">依然退出</string>
    <string name="back_profile_text">退出后将无法再次浏览该模特的资料哦</string>
    <string name="LBS">无法定位，请打开定位服务</string>
    <string name="msg_setting">消息设置</string>
    <string name="msg_tip">消息提醒</string>
    <string name="gesture_tip">手势密码</string>
    <string name="new_msg_tip">新消息提醒</string>
    <string name="ring_tip">提示音效</string>
    <string name="ring">铃声</string>
    <string name="vibrate">震动</string>
    <string name="setting">设置</string>
    <string name="commonproblem">常见问题</string>
    <string name="viprivileges">会员特权</string>
    <string name="myprifle">个人中心</string>
    <string name="mypriflesetting">个人资料</string>
    <string name="preference">预约筛选</string>
    <string name="verify">手机认证</string>
    <string name="vip_infor">会员信息</string>
    <string name="vip_infor_qq">专属联系方式</string>
    <string name="new_version">版本检测</string>
    <string name="about_usus">关于我们</string>
    <string name="clean_cache">清除缓存</string>
    <string name="key_code_tip">当你好友使用你上面的分享码时\n你们都将获得5把钥匙</string>
    <string name="get_key_type">获取钥匙的方法</string>
    <string name="key_title">钥匙获得</string>
    <string name="key">钥匙</string>
    <string name="sign">签到</string>
    <string name="moneybag">钱包</string>
    <string name="coupon">代金券</string>
    <string name="get_key_1">• 每日点击签到可以获得</string>
    <string name="get_key_2">• 成功消费，评价后可以获得</string>
    <string name="get_key_3">• 他人使用你的推荐码注册成功后可以获得</string>
    <string name="change">修改</string>
    <string name="unit">元</string>
    <string name="advance_succ">提现申请提交成功！我们将在1~3个工作日处理完成</string>
    <string name="advance_money">提现金额</string>
    <string name="unable_advance">提现金额不能为0</string>
    <string name="balance">可用余额</string>
    <string name="my_balance">余额(元)</string>
    <string name="order_price">订单金额(元)</string>
    <string name="recharge">充值</string>
    <string name="need_price">实付金额</string>
    <string name="unionpay">银联卡</string>
    <string name="alipay">支付宝</string>
    <string name="wechatpay">微信</string>
    <string name="pay_online">线上支付</string>
    <string name="pay_outline">线下支付</string>
    <string name="pay_cancle">取消订单</string>
    <string name="withdraw_cash">提现</string>
    <string name="bankcard">银行卡</string>
    <string name="no_balance">暂无可用余额</string>
    <string name="advance_tip">该银行卡是您唯一的提现卡，如需更换银行卡请先解除绑定</string>
    <string name="bind_BankCard">银行卡</string>
    <string name="my_wallet">我的钱包</string>
    <string name="payMode">充值方式</string>
    <string name="my_bill">账单</string>
    <string name="my_bill_detail">账单明细</string>
    <string name="add_bind_BankCard">添加银行卡</string>
    <string name="bind_BankCard_tip">请绑定持卡人本人的银行卡</string>
    <string name="card_own">持卡人</string>
    <string name="card_own_name">请输入姓名</string>
    <string name="card_own_card">请输入卡号</string>
    <string name="card">卡号&#160;&#160;&#160;&#160;</string>
    <string name="change_psd">修改登录密码</string>
    <string name="change_phone">手机号更改</string>
    <string name="change_phone_btn">更换手机号</string>
    <string name="binded_phone">当前邮箱</string>
    <string name="submit">提交</string>
    <string name="new_phone_hint">请输入新的手机号</string>
    <string name="old_psd_hint">请输入旧密码</string>
    <string name="new_psd_hint">请输入新密码</string>
    <string name="repeat_psd_hint">重复新密码</string>
    <string name="balance_tip">余额（元）</string>
    <string name="advance">提现</string>
    <string name="nickname">昵称</string>
    <string name="username">用户名</string>
    <string name="username_iput">输入用户名</string>
    <string name="input_old_psd">输入旧密码</string>
    <string name="input_new_psd">输入新密码</string>
    <string name="input_new_psd_agin">重复新密码</string>
    <string name="password">密&#160;&#160;&#160;&#160;码</string>
    <string name="new_psd">输入新密码</string>
    <string name="new_psd_agein">重复新密码</string>
    <string name="sex">性别</string>
    <string name="upload_item1">从相册选择</string>
    <string name="upload_item2">拍照</string>
    <string name="key_hint_skip">请输入6位邀请码(可跳过)</string>
    <string name="key_hint">请输入6位邀请码</string>
    <string name="invite">邀请朋友</string>
    <string name="change_one">换一个</string>
    <string name="this_one">就这个</string>
    <string name="image">图片</string>
    <string name="location">位置</string>
    <string name="send_location">发送位置</string>
    <string name="so_short_tip">时间太短</string>
    <string name="voice_cancle_tip">取消录音</string>
    <string name="my_profile_pic">头像</string>
    <string name="choose_pay">支付选择</string>
    <string name="rating">发表评价</string>
    <string name="tag_tip">请选择标签(最多三个)</string>
    <string name="psd_style">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="text_style">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz@.</string>
    <string name="change_sus">修改成功</string>
    <string name="no_code">未邀请手机认证用户</string>
    <string name="no_user">用户不存在</string>
    <string name="no_msg">你暂时还没有消息，去匹配一个模特吧</string>
    <string name="no_orer_item">暂无订单</string>
    <string name="no_bill_item">暂无账单</string>
    <string name="no_pic_item">暂无图片</string>
    <string name="no_rating_item">暂无评价</string>
    <string name="no_vip_item">暂无特权</string>
    <string name="no_vip_service">暂无服务项目</string>
    <string name="vip_tittle">会员特权</string>
    <string name="vip_tip">VIP会员</string>
    <string name="no_voucher">您暂时没有代金券</string>
    <string name="no_rating">请先评分！</string>
    <string name="no_tag">请选择一个标签！</string>
    <string name="cancle_order_text">确定取消该订单？</string>
    <string name="order_undone">当前有未完成的订单！</string>
    <string name="video_null">暂无视频</string>
    <string name="operate_fail">操作失败</string>
    <string name="matching_fail">方圆100km,尚未匹配到模特哟！</string>
    <string name="getData_fail">服务器异常，请稍后再试</string>
    <string name="getData_out_time">网络超时，请稍后重试</string>
    <string name="lbs_fail">定位失败，请确认是否开启定位和网络</string>
    <string name="no_network">暂无网络连接</string>
    <string name="no_bind_card">尚未绑定银行卡</string>
    <string name="account_fail">账号或密码错误</string>
    <string name="download_image_fail">加载图片失败</string>
    <string name="nickname_error">昵称格式错误</string>
    <string name="not_digit">不能为纯数字</string>
    <string name="code_error">验证码格式错误</string>
    <string name="psd_error">密码错误</string>
    <string name="key_out_of">钥匙不够！</string>
    <string name="key_error">邀请码错误</string>
    <string name="spinner_error">请选择银行</string>
    <string name="own_error">持卡人不能为空</string>
    <string name="card_error">银行卡号格式错误</string>
    <string name="old_psd_type_error">旧密码格式错误</string>
    <string name="new_psd_type_error">新密码格式错误</string>
    <string name="repeat_psd_error">两次密码不一致</string>
    <string name="set_psd_error">密码长度不正确</string>
    <string name="no_sdCard">找不到SD卡</string>
    <string name="no_imgefile_fail">找不到图片文件</string>
    <string name="no_file_fail">找不到文件</string>
    <string name="crop_pick_error">无可用图片资源</string>
    <string name="crop__wait">请等待...</string>
    <string name="crop__saving">正在保存...</string>
    <string name="send_fail">发送失败</string>
    <string name="add_friend_fail">添加好友失败</string>
    <string name="no_newversion">当前已是最新版本</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_mobile_verify">MobileVerifyActivity</string>
    <string name="check_ifvip">请充值会员后再与美模聊天</string>
    <string name="permission_on_location">请打开定位权限</string>
    <string name="mobile_notice">尊敬的用户:\n&#160;&#160;&#160;&#160;为了提供更好的服务我们将进行手机认证，
        我们保证绝对安全并且不泄漏您的隐私，签约美模对验证手机的用户更为青睐，请验证手机后与美模交谈。</string>
    <string name="mobile_notice_reminding">老司机们注意啦！\n&#160;&#160;&#160;&#160;PaPa不会在APP外的任何渠道向您要求转账、汇款。为了您的人身和财物安全，请不要与模特在APP外发生资金往来。</string>
    <string name="mobile_verify_now">立即认证</string>
    <string name="mobile_verify_remind">立即进入</string>
    <string name="mobile_verify_nexttime">下次再说</string>
    <string name="mobile_verify_not_reminding">不再提醒</string>
    <string name="skip">跳过</string>
    <string name="money_text">金额</string>
    <string name="pay_limite_money">单笔限额：5000</string>
    <string name="pay_cost_time">预计到账时间5分钟，请耐心等待</string>
</resources>