<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_custom_bank" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/top_margin22"
        android:layout_marginLeft="@dimen/top_margin20"
        android:layout_marginTop="@dimen/top_margin22"
        android:orientation="horizontal">

        <TextView
            style="@style/edit_hint15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance" />

        <TextView
            android:id="@+id/text_balance"
            style="@style/text_gray15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/view_card"
        style="@style/item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false">

        <TextView
            android:id="@+id/bank_name"
            style="@style/text_setting15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="" />

        <TextView
            android:id="@+id/card_num"
            style="@style/edit_hint15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/top_margin20"
        android:layout_marginRight="@dimen/top_margin20"
        android:layout_marginTop="@dimen/padding_left">

        <ImageView
            android:id="@+id/help_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@mipmap/help" />

        <TextView
            style="@style/gray_text12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/top_margin5"
            android:layout_toRightOf="@+id/help_icon"
            android:text="@string/advance_tip" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/view_money"
        style="@style/item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin20"
        android:clickable="false">

        <TextView
            android:id="@+id/money_tip"
            style="@style/text_setting15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/advance_money" />

        <EditText
            android:id="@+id/edit_money"
            style="@style/text_setting15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toLeftOf="@+id/unit"
            android:layout_toRightOf="@+id/money_tip"
            android:background="@null"
            android:inputType="number"
            android:singleLine="true" />

        <TextView
            android:id="@+id/unit"
            style="@style/text_setting15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/unit" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_over"
        style="@style/btn_pink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin39"
        android:enabled="false"
        android:text="@string/advance" />
</LinearLayout>